--- a/src/app/plotter/plotter.component.html
+++ b/src/app/plotter/plotter.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-2">
       <div class="form-group">
-        <button type="button" (click)="this.run_plot()" class="btn btn-success">Plot!</button>
+        <button type="button" (click)="this.parseFileContent()" class="btn btn-success">Plot!</button>
       </div>
     </div>
   </form>
@@ -16,13 +16,6 @@
 
 <div class="row">
   <div class="col-md-12">
-    <div class="card">
-      <div class="card-header">
-        <h3>Main plot</h3>
-      </div>
-      <div class="card-body">
-        <div id="main_plot"></div>
-      </div>
-    </div>
+    <app-main-plot [PlotEvent]="this.PlotEvent"></app-main-plot>
   </div>
 </div>
