Added plotting of prediction and observations

--- a/src/app/plotter/plotter.component.html
+++ b/src/app/plotter/plotter.component.html
@@ -19,3 +19,8 @@
     <app-main-plot [PlotEvent]="this.PlotEvent"></app-main-plot>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-12">
+    <app-prediction-plot [PlotEvent]="this.PlotEvent"></app-prediction-plot>
+  </div>
+</div>
