--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navigation></app-navigation>
 
-<div class="container">
+<div class="container container-fluid">
   <router-outlet></router-outlet>
 </div>
 
