Added some calculated stats for RootMeanSquareError Cleaned up the design Set the page to use full width instead of a small portion, it makes the graphs more visible

--- a/src/app/plotter/plotter.component.html
+++ b/src/app/plotter/plotter.component.html
@@ -14,13 +14,16 @@
   </form>
 </div>
 
-<div class="row">
+<div class="row mt-3">
   <div class="col-md-12">
     <app-main-plot [PlotEvent]="this.PlotEvent"></app-main-plot>
   </div>
 </div>
-<div class="row">
-  <div class="col-md-12">
+<div class="row mt-3">
+  <div class="col-md-10">
     <app-prediction-plot [PlotEvent]="this.PlotEvent"></app-prediction-plot>
+  </div>
+  <div class="col-md-2">
+    <app-stats [PlotEvent]="this.PlotEvent"></app-stats>
   </div>
 </div>
