--- a/src/app/plotter/prediction-plot/prediction-plot.component.html
+++ b/src/app/plotter/prediction-plot/prediction-plot.component.html
@@ -1,4 +1,7 @@
 <div class="card">
+  <div class="card-header">
+    Prediction Plot
+  </div>
   <div class="card-body">
     <div id="prediction_plot"></div>
   </div>
