--- a/src/app/plotter/main-plot/main-plot.component.html
+++ b/src/app/plotter/main-plot/main-plot.component.html
@@ -1,4 +1,7 @@
 <div class="card">
+  <div class="card-header">
+    Main Heatmap Plot
+  </div>
   <div class="card-body">
     <div id="main_plot"></div>
   </div>
