--- a/src/app/plotter/plotter.component.html
+++ b/src/app/plotter/plotter.component.html
@@ -20,9 +20,11 @@
   </div>
 </div>
 <div class="row mt-3">
-  <div class="col-md-10">
+  <div class="col-md-12">
     <app-prediction-plot [PlotEvent]="this.PlotEvent"></app-prediction-plot>
   </div>
+</div>
+<div class="row mt-3">
   <div class="col-md-2">
     <app-stats [PlotEvent]="this.PlotEvent"></app-stats>
   </div>
